--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -6,3 +6,6 @@
  <% @song.genres.each do |genre| %>
   <a href="/genres/<%=genre.slug%>"><%= genre.name %></a>
     <%end%>
+    <% if flash.has?(:message) %>
+      <%= flash[:message] %>
+    <% end %>
