--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -3,7 +3,7 @@
   <input type='hidden' name="_method" value="PATCH">
   <p><label>Song Name:</label><input type="text" name="Name" id="Name" value="<%=@song.name%>"></p>
     <br>
-    <label>Artist Name:</label><input type='text' name="artist[name]" id="Artist Name" value="<%=@song.artist.name">>
+    <label>Artist Name:</label><input type='text' name="artist[name]" id="Artist Name" value="<%=@song.artist.name>">
       <br>
       <label>Choose an Existing Genre:</label>
           <% @genres.each do |genre| %>
