Automatically backed up by Learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -6,7 +6,7 @@
     <label>Artist Name:</label><input type='text' name="artist[name]" id="Artist Name" value="<%=@song.artist.name>">
       <br>
       <label>Choose an Existing Genre:</label>
-          <% @genres.uniq.each do |genre| %>
+          <% @genres.each do |genre| %>
           <input type="checkbox" name="genres[]" value="<%=genre.id%>" id="<%=genre.name%>">  <%=genre.name%></input>
           <%end%>
     <input type="submit" value="submit" id="Create">
