--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -9,5 +9,5 @@
           <% @genres.each do |genre| %>
           <input type="checkbox" name="genres[]" value="<%=genre.id%>" id="<%=genre.name%>">  <%=genre.name%></input>
           <%end%>
-    <input type="submit" value="submit" id="save">
+    <input type="submit" value="submit" id="Save">
 </form>
