--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -11,3 +11,7 @@
           <%end%>
     <input type="submit" value="submit" id="Save">
 </form>
+
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
